
	* doc/src/mann/ns_return.man:
	* doc/src/mann/ns_write.man: Split ns_write, ns_headers and
	ns_connsendfp into their own man page, the distinction being that the
	all construct responses incrementally whereas ns_return, ns_respond,
	ns_returnfile and ns_returnfp return a fully formed HTTP response.

	* tests/tclresp.test: Test the headers/no-headers case for ns_write and
	ns_startcontent.

2007-08-22  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/connio.c (ConnSend):
	* tests/http.test:
	* tests/testserver/pages/16480bytes: Add a call to
	Ns_ConnSetLengthHeader() at the start of ConnSend() with the total
	length of the file to send, otherwise Content-Length gets reported as
	8192 which is the size of the buffer (IOBUFSZ) used to read the file off
	disk.

2007-08-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c:
	* nsd/nsd.h: Added suppoirt for stat64 in FastStat. It uses TCL
	defined HAVE_STRUCT_STAT64

2007-08-20  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/nsproxylib.c: Proxy ID is now allocated dynamically
	instead of having limited/fixed length of 16 characters.

2007-08-14  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclmisc.c: Replaced uint32 with ns_uint32 so this 
	gets compiled on platforms not supporting autoconf 2.60

2007-08-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclinit.c: Remove the async cancel stuff. See module: nsloopctl.

	* nsd/cookies.c:
	* tests/cookies.test:
	* NEWS:
	* doc/src/mann/ns_cookie.man: Rename -maxage option to ns_setcookie
	-expires to match common usage throughout rest of API. Now handles
	absolute and relative time values.

	* include/ns.h:
	* nsd/cookies.c:
	* tests/cookies.test:
	* NEWS:
	* doc/src/mann/ns_cookie.man: Cookies are now set with the HttpOnly
	option by default which makes the cookie data unavailable to client
	javascript engines (on those browsers which support it). A new
	-scriptable option is available to ns_setcookie to get the old